tests/NormalTests/paczka2/big_fuzzy/74576901.err
Error in line 2: zRfgJMjdS9c S485 62,5
Error in line 1: GFUu0QHZ A815 82,5
Error in line 10: S757 A815 93,0
Error in line 16: S757 A11 -1,57
Error in line 21: RrF5A S485 97,9
Error in line 29: Dk3Raq S485 122,2
Error in line 42: Dk3Raq A815 41,7
Error in line 31: RrF5A A11 33,1
Error in line 47: RrF5A A11 73,17
Error in line 46: RrF5A S757 91,3
Error in line 11: S757 A11 14,4
Error in line 50: RrF5A A11 324,3
Error in line 62: GFUu0QHZ S485 41,3
Error in line 71: GFUu0QHZ A11 88,7
Error in line 78: zRfgJMjdS9c S757 73,9
Error in line 92: RrF5A S485 878,8
Error in line 94: RrF5A A11 93,1
Error in line 91: zRfgJMjdS9c S485 54,9
Error in line 97: zRfgJMjdS9c A11 7,2
Error in line 95: RrF5A S757 16,9
Error in line 100: RrF5A A815 70,4
Error in line 101: RrF5A S485 26,0
Error in line 109: RrF5A A815 25,2
Error in line 98: zRfgJMjdS9c S757 73,5
Error in line 108: GFUu0QHZ S757 28,7
Error in line 112: zRfgJMjdS9c A11 13,1
Error in line 140: pbXb2 A11 66,2
Error in line 141: mcjn9 A11 98,2
Error in line 158: RrF5A A815 75,1
Error in line 155: mcjn9 A815 36,2
Error in line 172: S757 S757 -6,9
Error in line 168: S757 S757 84,5
Error in line 174: Dk3Raq S4y5 4,y
Error in line 170: mcjn9 S485 17,4
Error in line 173: S757 A815 95,4
Error in line 178: S757 S485 4,3
Error in line 165: zRfgJMjdS9c S757 160,2
Error in line 194: zRfgJMjdS9c S485 69,2
Error in line 196: mcjn9 A815 12,7
Error in line 193: RrF5A A815 10,4
Error in line 216: pbXb2 S485 80,5
Error in line 226: zRfgJMjdS9c A11 9,16
Error in line 225: RrF5A A815 982,0
Error in line 229: RrF5A A11 28,8
Error in line 237: mcjn9 S757 21,1
Error in line 240: mcjn9 A815 05,1
